# PYDOS

./: InfCmd.py  boot.py  exiting.py  main.py  pyproject.toml  readme.md  readme.py
DiskDrive/: Game.py  Txted.py  disk.py  testfile.txt
System32/: drive.py
